@startuml  Diagrama de Classes
class Usuario {
  -email: String
  -senha: String
  -nome: String
  -CPF: String 
  +login(): boolean
}

class Aluno {
  -rg: String
  -endereco: String
  -curso: String
  -saldo: int
  +consultarExtrato(): List<Transacao>
  +trocarMoedas(v: Vantagem): Cupom
  +receberMoedas(qtd: int, motivo: String)
}

class Professor {
  -departamento: String
  -saldo: int
  +distribuirMoedas(aluno: Aluno, qtd: int, motivo: String): Transacao
  +consultarExtrato(): List<Transacao>
}

class EmpresaParceira {
  -nome: String
  -email: String
  -senha: String
  +cadastrarVantagem(v: Vantagem)
  +receberNotificacao(c: Cupom)
}

class Vantagem {
  -descricao: String
  -foto: String
  -custo: int
  -empresa: EmpresaParceira
}

class Instituicao {
  -nome: String
  +listarProfessores(): List<Professor>
  +listarAlunos(): List<Aluno>
}

class Cupom {
  -codigo: String
  -dataGeracao: Date
  -validade: Date
  -vantagem: Vantagem
}

class Transacao {
  -data: Date
  -valor: int
  -descricao: String
  -origem: Aluno
  -destino: Aluno
}

Usuario <|-- Aluno
Usuario <|-- Professor
Aluno --> Instituicao
Professor --> Instituicao
Aluno --> Transacao
Professor --> Transacao
EmpresaParceira --> Vantagem
Aluno --> Cupom
Aluno --> Vantagem
Cupom --> Vantagem
@enduml